fix Hero__Hn line-height on IE

--- a/web/themes/custom/legacy/css/src/_hack.ie.less
+++ b/web/themes/custom/legacy/css/src/_hack.ie.less
@@ -104,6 +104,15 @@
   .c-Hero {
     margin-bottom: (2 * @p-vru);
   }
+  .c-Hero__Hn {
+    line-height: calc(1.5 / 1.125);
+    @media screen and (min-width: 45em) {
+      line-height: calc(1.5 / 1.375);
+    }
+    @media screen and (min-width: 60em) {
+      line-height: calc(1.5 / (2.25 / 2));
+    }
+  }
   .c-Hero__Blurb {
     padding-bottom: @p-vru;
   }
